--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jquery": "^3.6.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "protobufjs": "^6.11.2"
   }
 }
